Update api