@@ -16,6 +16,7 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -32,26 +33,37 @@ public class SecurityConfig {
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
                 .csrf(csrf -> csrf.disable())
                 .sessionManagement(session -> session
-                        .sessionCreationPolicy(SessionCreationPolicy.IF_REQUIRED)
-                        .sessionFixation().migrateSession() // Protect against session fixation
+                        .sessionCreationPolicy(SessionCreationPolicy.ALWAYS) // Changed to ALWAYS for iOS
+                        .sessionFixation().migrateSession()
                 )
                 .authorizeHttpRequests(auth -> auth
-                        .requestMatchers("/login", "/error", "/ws/**").permitAll()
+                        .requestMatchers(
+                                "/",
+                                "/login",
+                                "/error",
+                                "/ws/**",
+                                "/api/auth/user",
+                                "/oauth2/**"
+                        ).permitAll()
                         .requestMatchers("/user/profile", "/logout").authenticated()
                         .anyRequest().authenticated()
                 )
                 .oauth2Login(oauth2 -> oauth2
                         .userInfoEndpoint(userInfo -> userInfo.userService(authService))
                         .successHandler((request, response, authentication) -> {
-                            request.getSession().setAttribute("user", authentication.getPrincipal()); // Store user session
+                            request.getSession().setAttribute("user", authentication.getPrincipal());
                             String redirectUrl = (String) request.getSession().getAttribute("redirectAfterLogin");
                             if (redirectUrl == null) {
-                                redirectUrl = "http://localhost:5173/feed";
+                                redirectUrl = "https://thinkflow-flax.vercel.app/feed";
                             }
-                            System.out.println("OAuth Success - Redirecting to: " + redirectUrl);
+                            // Add cache control headers for iOS
+                            response.setHeader("Cache-Control", "no-cache, no-store, must-revalidate");
                             response.sendRedirect(redirectUrl);
                         })
-                        .failureUrl("/login?error=true")
+                        .failureHandler((request, response, exception) -> {
+                            response.setHeader("Cache-Control", "no-cache, no-store, must-revalidate");
+                            response.sendRedirect("https://thinkflow-flax.vercel.app/login?error=true");
+                        })
                 )
                 .logout(logout -> logout
                         .logoutUrl("/logout")
@@ -60,6 +72,10 @@ public class SecurityConfig {
                         .deleteCookies("JSESSIONID")
                         .addLogoutHandler(logoutHandler())
                         .logoutSuccessHandler((request, response, authentication) -> {
+                            // iOS-specific headers
+                            response.setHeader("Cache-Control", "no-cache, no-store, must-revalidate");
+                            response.setHeader("Pragma", "no-cache");
+                            response.setHeader("Expires", "0");
                             response.setStatus(HttpServletResponse.SC_OK);
                             response.getWriter().write("Logout successful");
                         })
@@ -67,6 +83,7 @@ public class SecurityConfig {
                 )
                 .exceptionHandling(exception -> exception
                         .authenticationEntryPoint((request, response, authException) -> {
+                            response.setHeader("Cache-Control", "no-cache, no-store, must-revalidate");
                             response.sendError(HttpServletResponse.SC_UNAUTHORIZED, "Unauthorized");
                         })
                 );
@@ -82,11 +99,23 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("http://localhost:5173"));
-        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(List.of("*"));
+        // Allow both Vercel and local development origins
+        configuration.setAllowedOrigins(Arrays.asList(
+                "https://thinkflow-flax.vercel.app"
+        ));
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+        configuration.setAllowedHeaders(Arrays.asList("*"));
         configuration.setAllowCredentials(true);
-        configuration.setExposedHeaders(List.of("Authorization", "Access-Control-Allow-Origin", "Access-Control-Allow-Credentials"));
+        // iOS-specific exposed headers
+        configuration.setExposedHeaders(Arrays.asList(
+                "Authorization",
+                "Access-Control-Allow-Origin",
+                "Access-Control-Allow-Credentials",
+                "Set-Cookie",  // Critical for iOS
+                "X-Requested-With"
+        ));
+        // Safari cache settings
+        configuration.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
